--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -206,11 +206,11 @@ configure_file(
   "${CONF_INCLUDE_DIR}/stir/config.h"
   )
 # add it to the install target
-install(FILES "${CONF_INCLUDE_DIR}/stir/config.h" DESTINATION include/stir)
+install(FILES "${CONF_INCLUDE_DIR}/stir/config.h" DESTINATION "${STIR_INCLUDE_INSTALL_DIR}/stir")
 
 #### install include files
 set (INCLUDE_DIR "${PROJECT_SOURCE_DIR}/src/include")
-install(DIRECTORY "${INCLUDE_DIR}/" DESTINATION include)
+install(DIRECTORY "${INCLUDE_DIR}/" DESTINATION "${STIR_INCLUDE_INSTALL_DIR}")
 
 #### find header files for re-use in stir_exe_targets.cmake and doxygen target
 include(FindAllHeaderFiles)
