--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -282,7 +282,7 @@ jobs:
           EXTRA_BUILD_FLAGS="-DBUILD_SWIG_PYTHON=ON -DPYTHON_EXECUTABLE=`which python`"
           EXTRA_BUILD_FLAGS="${EXTRA_BUILD_FLAGS} -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_BUILD_TYPE=${BUILD_TYPE}"
           EXTRA_BUILD_FLAGS="${EXTRA_BUILD_FLAGS} -DDOWNLOAD_ZENODO_TEST_DATA=ON"
-          EXTRA_BUILD_FLAGS="${EXTRA_BUILD_FLAGS} -DDISABLE_STIR_LOCAL=OFF -DSTIR_LOCAL=${GITHUB_WORKSPACE}/examples/C++/src"
+          EXTRA_BUILD_FLAGS="${EXTRA_BUILD_FLAGS} -DDISABLE_STIR_LOCAL=OFF -DSTIR_LOCAL=${GITHUB_WORKSPACE}/examples/C++/using_STIR_LOCAL"
           echo "cmake flags $BUILD_FLAGS $EXTRA_BUILD_FLAGS"          
           mkdir build
           cd build
@@ -370,7 +370,7 @@ jobs:
 
           # Run the Demo executables
           EXE_LOC=${GITHUB_WORKSPACE}/build/src/examples/C++
-          cd ${GITHUB_WORKSPACE}/examples/C++/src
+          cd ${GITHUB_WORKSPACE}/examples/C++/using_STIR_LOCAL
 
           generate_image generate_image.par
           forward_project sino.hs image.hv  small.hs
