--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 repos:
--   repo: git://github.com/doublify/pre-commit-clang-format
+-   repo: https://github.com/doublify/pre-commit-clang-format
     rev: '62302476'
     hooks:
     -   id: clang-format
