--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,4 +1,4 @@
-name: Check
+name: Run pre-commit check
 on:
 - push
 - pull_request
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     name: pre-commit
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
     - run: sudo apt-get install -yqq clang-format
-    - uses: pre-commit/action@v2.0.0
+    - uses: pre-commit/action@v3.0.0
