--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -259,8 +259,10 @@ jobs:
 
           # Install ROOT (warning: currently only valid on Ubuntu)
           if test "${{matrix.ROOT}}XX" == "ONXX"; then
-             wget https://root.cern/download/root_v6.24.02.Linux-ubuntu20-x86_64-gcc9.3.tar.gz
-             tar -xzvf root_v6.24.02.Linux-ubuntu20-x86_64-gcc9.3.tar.gz
+             ROOT_file=root_v6.28.12.Linux-ubuntu20-x86_64-gcc9.4.tar.gz
+             wget https://root.cern/download/"$ROOT_file"
+             tar -xzvf "$ROOT_file"
+             rm "$ROOT_file"
              source root/bin/thisroot.sh
           fi
 
