--- a/src/recon_test/CMakeLists.txt
+++ b/src/recon_test/CMakeLists.txt
@@ -26,6 +26,7 @@ set(${dir_SIMPLE_TEST_EXE_SOURCES}
         test_FBP3DRP.cxx
         test_priors.cxx
         test_blocks_on_cylindrical_projectors.cxx
+        test_geometry_blocks_on_cylindrical.cxx
 )
 
 
