first attempt at integration with stir

--- a/src/recon_buildblock/CMakeLists.txt
+++ b/src/recon_buildblock/CMakeLists.txt
@@ -126,6 +126,11 @@ if (STIR_WITH_Parallelproj_PROJECTOR)
   )
 endif()
 
+if (STIR_WITH_STIR_CUDA)
+  list(APPEND ${dir_LIB_SOURCES}
+    CUDA_stir/CudaRelativeDifferencePrior.cu
+  )
+endif()
 
 include(stir_lib_target)
 
@@ -154,4 +159,8 @@ if (STIR_WITH_Parallelproj_PROJECTOR)
   if (parallelproj_built_with_CUDA)
     target_link_libraries(recon_buildblock PUBLIC parallelproj::parallelproj_cuda)
   endif()
+endif()
+
+if (STIR_WITH_STIR_CUDA)
+  target_link_libraries(recon_buildblock PUBLIC CUDA::cudart)
 endif()
