registry add and cmake cuda package/include dirs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -212,6 +212,8 @@ if(NOT DISABLE_STIR_CUDA)
   find_package(CUDAToolkit)
   if (CUDAToolkit_FOUND)
     set(CMAKE_CUDA_ARCHITECTURES "all")
+    find_package(CUDA REQUIRED)
+    include_directories("${CUDA_INCLUDE_DIRS}")
     set(STIR_WITH_STIR_CUDA ON)
     if(STIR_WITH_STIR_CUDA)
       enable_language(CUDA)
