--- a/src/cmake/STIRConfig.h.in
+++ b/src/cmake/STIRConfig.h.in
@@ -69,6 +69,8 @@ namespace stir {
 
 #cmakedefine STIR_WITH_NiftyPET_PROJECTOR
 
+#cmakedefine STIR_WITH_STIR_CUDA
+
 #cmakedefine STIR_WITH_Parallelproj_PROJECTOR
 #cmakedefine parallelproj_built_with_CUDA
 
