--- a/src/recon_buildblock/CMakeLists.txt
+++ b/src/recon_buildblock/CMakeLists.txt
@@ -126,14 +126,13 @@ if (STIR_WITH_Parallelproj_PROJECTOR)
   )
 endif()
 
-if (STIR_WITH_STIR_CUDA)
+if (STIR_WITH_CUDA)
   list(APPEND ${dir_LIB_SOURCES}
-    CUDA_stir/CudaRelativeDifferencePrior.cu
+    CUDA/CudaRelativeDifferencePrior.cu
   )
 endif()
 
 include(stir_lib_target)
-
 
 if (STIR_MPI)
   target_link_libraries(recon_buildblock PUBLIC ${MPI_CXX_LIBRARIES})
@@ -161,6 +160,6 @@ if (STIR_WITH_Parallelproj_PROJECTOR)
   endif()
 endif()
 
-if (STIR_WITH_STIR_CUDA)
+if (STIR_WITH_CUDA)
   target_link_libraries(recon_buildblock PUBLIC CUDA::cudart)
 endif()
