--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,6 +187,24 @@ else()
   message(STATUS "NiftyPET projector support disabled.")
 endif()
 
+if(NOT DISABLE_STIR_CUDA)
+  ## check 
+  find_package(CUDAToolkit REQUIRED)
+  find_package(CUDA REQUIRED)
+  if("${CMAKE_VERSION}" VERSION_LESS "3.23")
+    message(FATAL_ERROR "CMake 3.23 or newer is required to use CMAKE_CUDA_ARCHITECTURES set to 'all'")
+  else()
+    set(CMAKE_CUDA_ARCHITECTURES "all")
+  endif()
+  if (CUDAToolkit_FOUND)
+    if(STIR_WITH_CUDA)
+      enable_language(CUDA)
+      message(STATUS "STIR CUDA support enabled. Using CUDA version ${CUDAToolkit_VERSION}.")
+      set(STIR_WITH_CUDA ON)
+    endif()
+  endif()
+endif()
+
 # Parallelproj
 if(NOT DISABLE_Parallelproj_PROJECTOR)
     find_package(parallelproj 1.3.4 CONFIG)
@@ -206,20 +224,6 @@ if (STIR_WITH_Parallelproj_PROJECTOR)
   message(STATUS "Parallelproj projector support enabled.")
 else()
   message(STATUS "Parallelproj projector support disabled or not available.")
-endif()
-
-if(NOT DISABLE_STIR_CUDA)
-  find_package(CUDAToolkit)
-  if (CUDAToolkit_FOUND)
-    set(CMAKE_CUDA_ARCHITECTURES "all")
-    find_package(CUDA REQUIRED)
-    include_directories("${CUDA_INCLUDE_DIRS}")
-    set(STIR_WITH_STIR_CUDA ON)
-    if(STIR_WITH_STIR_CUDA)
-      enable_language(CUDA)
-      message(STATUS "STIR CUDA support enabled. Using CUDA version ${CUDAToolkit_VERSION}.")
-    endif()
-  endif()
 endif()
 
 #### enable support for ctest
