attempting to get the registries to work...

--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -143,9 +143,10 @@ if(@STIR_WITH_NiftyPET_PROJECTOR@)
   set(STIR_WITH_NiftyPET_PROJECTOR TRUE)
 endif()
 
-if(@STIR_WITH_STIR_CUDA@)
+if(@STIR_WITH_CUDA@)
   find_package(CUDAToolkit REQUIRED)
-  set(STIR_WITH_STIR_CUDA TRUE)
+  enable_language(CUDA)
+  set(STIR_WITH_CUDA TRUE)
 endif()
 
 if(@STIR_WITH_Parallelproj_PROJECTOR@)
