--- a/src/analytic/SRT2D/CMakeLists.txt
+++ b/src/analytic/SRT2D/CMakeLists.txt
@@ -6,7 +6,7 @@ set(dir analytic_SRT2D)
 set (dir_LIB_SOURCES ${dir}_LIB_SOURCES)
 
 set(${dir_LIB_SOURCES}
-	SRT2DReconstruction
+	SRT2DReconstruction.cxx
 )
 
 #$(dir)_REGISTRY_SOURCES:= 
@@ -17,7 +17,7 @@ target_link_libraries(analytic_SRT2D recon_buildblock IO )
 set (dir_EXE_SOURCES ${dir}_EXE_SOURCES)
 
 set(${dir_EXE_SOURCES}
-	SRT2D
+	SRT2D.cxx
 )
 
 include(stir_exe_targets)
