LM obj-fun: add value() and tests
- compute_objective_function() is now implemented as well
- Tests are (almost) a duplicate of the ProjData version, but
  gradient-test is disabled as for this sample data it is too slow

--- a/src/recon_test/CMakeLists.txt
+++ b/src/recon_test/CMakeLists.txt
@@ -36,6 +36,7 @@ set(${dir_INVOLVED_TEST_EXE_SOURCES}
         recontest.cxx
         test_data_processor_projectors.cxx
         test_OSMAPOSL.cxx
+        test_PoissonLogLikelihoodWithLinearModelForMeanAndListModeWithProjMatrixByBin.cxx
 )
 
 if (DOWNLOAD_ZENODO_TEST_DATA)
@@ -127,6 +128,9 @@ include(stir_test_exe_targets)
 
 # a test that uses MPI
 create_stir_mpi_test(test_PoissonLogLikelihoodWithLinearModelForMeanAndProjData.cxx "${STIR_LIBRARIES}" $<TARGET_OBJECTS:stir_registries>)
+
+ADD_TEST(test_PoissonLogLikelihoodWithLinearModelForMeanAndListModeWithProjMatrixByBin
+  test_PoissonLogLikelihoodWithLinearModelForMeanAndListModeWithProjMatrixByBin "${CMAKE_SOURCE_DIR}/recon_test_pack/PET_ACQ_small.l.hdr.STIR")
 
 # fwdtest and bcktest could be useful on their own, so we'll add them to the installation targets
 if (BUILD_TESTING)
