--- a/.github/workflows/pre-commit-check.yml
+++ b/.github/workflows/pre-commit-check.yml
@@ -1,22 +1,22 @@
-//name: Run pre-commit check
-//on:
-//- push
-//- pull_request
-//jobs:
-//  check:
-//    runs-on: ubuntu-latest
-//    name: pre-commit
-//    steps:
-//    - uses: actions/checkout@v4
-//    - uses: actions/setup-python@v5
-//    - run: sudo apt-get install -yqq clang-format
-//    - uses: pre-commit/action@v3.0.0
+#name: Run pre-commit check
+#on:
+#- push
+#- pull_request
+#jobs:
+#  check:
+#    runs-on: ubuntu-latest
+#    name: pre-commit
+#    steps:
+#    - uses: actions/checkout@v4
+#    - uses: actions/setup-python@v5
+#    - run: sudo apt-get install -yqq clang-format
+#    - uses: pre-commit/action@v3.0.0
 
 name: Run pre-commit check
 
 on:
-  push:
-  pull_request:
+  - push 
+  - pull_request 
 
 jobs:
   check:
