--- a/.github/workflows/pre-commit-check.yml
+++ b/.github/workflows/pre-commit-check.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
     - uses: actions/checkout@v4
   #  - uses: actions/setup-python@v5
-    - run: sudo apt-get install -yqq clang-format
+  #  - run: sudo apt-get install -yqq clang-format
     - uses: pre-commit/action@v3.0.0
