--- a/.github/workflows/pre-commit-check.yml
+++ b/.github/workflows/pre-commit-check.yml
@@ -13,9 +13,9 @@ jobs:
       with:
         node-version: '20.x'  # Use Node.js 20.x
     
-  #  - uses: actions/setup-python@v5
+    - uses: actions/setup-python@v5
   #  - run: sudo apt-get install -yqq clang-format
-    - uses: pre-commit/action@v3.0.0
+   # - uses: pre-commit/action@v3.0.0
 
 
 #    - name: Install clang-format
