--- a/.github/workflows/pre-commit-check.yml
+++ b/.github/workflows/pre-commit-check.yml
@@ -14,7 +14,7 @@ jobs:
         node-version: '20.x'  # Use Node.js 20.x
     
     - uses: actions/setup-python@v5
-  #  - run: sudo apt-get install -yqq clang-format
+    - run: sudo apt-get install -yqq clang-format
    # - uses: pre-commit/action@v3.0.0
 
 
