error handling in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,16 +188,27 @@ else()
 endif()
 
 if(NOT DISABLE_STIR_CUDA)
-  ## check 
-  enable_language(CUDA)
-  find_package(CUDAToolkit REQUIRED)
-  if("${CMAKE_VERSION}" VERSION_LESS "3.23")
-    message(FATAL_ERROR "CMake 3.23 or newer is required to use CMAKE_CUDA_ARCHITECTURES set to 'all'")
+  enable_language(CUDA OPTIONAL)
+  find_package(CUDAToolkit QUIET)
+  if (CMAKE_CUDA_COMPILER)
+    if (NOT CUDAToolkit_FOUND)
+      message(WARNING "CUDAToolkit_FOUND not detected. Setting DISABLE_STIR_CUDA to ON.")
+      set(DISABLE_STIR_CUDA ON)
+      set(STIR_WITH_CUDA OFF)
+    else()
+      if("${CMAKE_VERSION}" VERSION_LESS "3.23")
+        message(FATAL_ERROR "CMake 3.23 or newer is required to use CMAKE_CUDA_ARCHITECTURES set to 'all'")
+      else()
+        set(CMAKE_CUDA_ARCHITECTURES "all")
+      endif()
+      message(STATUS "STIR CUDA support enabled. Using CUDA version ${CUDAToolkit_VERSION}.")
+      set(STIR_WITH_CUDA ON)
+    endif()
   else()
-    set(CMAKE_CUDA_ARCHITECTURES "all")
+    message(WARNING "No CUDA compiler found. Setting DISABLE_STIR_CUDA to ON.")
+    set(DISABLE_STIR_CUDA ON)
+    set(STIR_WITH_CUDA OFF)
   endif()
-  message(STATUS "STIR CUDA support enabled. Using CUDA version ${CUDAToolkit_VERSION}.")
-  set(STIR_WITH_CUDA ON)
 endif()
 
 # Parallelproj
