[SWIG] re-ordering of includes to fix doc
DataSymmetriesForViewSegmentNumbers.h was included after stir_projdata.i,
meaning that `get_related_viewgrams` had documentation problems.

--- a/src/swig/CMakeLists.txt
+++ b/src/swig/CMakeLists.txt
@@ -92,9 +92,11 @@ set(swig_stir_dependencies
   stir_coordinates.i
   stir_dataprocessors.i
   stir_exam.i
+  stir_LOR.i
   stir_normalisation.i
   stir_objectivefunctions.i
   stir_priors.i
+  stir_projdata_coords.i
   stir_projdata.i
   stir_listmode.i
   stir_projectors.i
