[CMake] use check_language(CUDA)
enable_language(CUDA OPTIONAL) is not yet functional, so use
check_language instead

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,16 +187,18 @@ else()
 endif()
 
 if(NOT DISABLE_STIR_CUDA)
-  enable_language(CUDA OPTIONAL)
-  find_package(CUDAToolkit QUIET)
+  include(CheckLanguage)
+  check_language(CUDA)
   if (CMAKE_CUDA_COMPILER)
+    enable_language(CUDA)
+    find_package(CUDAToolkit QUIET)
     if (NOT CUDAToolkit_FOUND)
-      message(WARNING "CUDAToolkit_FOUND not detected. Setting DISABLE_STIR_CUDA to ON.")
+      message(WARNING "CUDAToolkit not detected. Setting DISABLE_STIR_CUDA to ON.")
       set(DISABLE_STIR_CUDA ON)
       set(STIR_WITH_CUDA OFF)
     else()
       if("${CMAKE_VERSION}" VERSION_LESS "3.23")
-        message(FATAL_ERROR "CMake 3.23 or newer is required to use CMAKE_CUDA_ARCHITECTURES set to 'all'")
+        message(FATAL_ERROR "CMake 3.23 or newer is required to use CMAKE_CUDA_ARCHITECTURES set to 'all'. Upgrade your CMake or set DISABLE_STIR_CUDA to ON.")
       else()
         set(CMAKE_CUDA_ARCHITECTURES "all")
       endif()
