Update build-test.yml [ci skip]
Checking if this change can lead to running  
Build and ctest and recon_test_pack CI

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -5,6 +5,7 @@ on:
     branches: 
       - master
       - tof_sino_UCL
+      - SRT2D  
     paths-ignore:
       - '.appveyor.yml'
       - 'CITATION.cff'
