skip CUDA test if nvidia-smi not found

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -205,6 +205,12 @@ if(NOT DISABLE_STIR_CUDA)
       message(STATUS "STIR CUDA support enabled. Using CUDA version ${CUDAToolkit_VERSION}.")
       set(STIR_WITH_CUDA ON)
     endif()
+    # check if run-time is available for ctests
+    find_program(NVIDIA_SMI nvidia-smi)
+    if (NOT NVIDIA_SMI)
+      message(WARNING "nvidia-smi not found. Disabling the ctests using CUDA")
+      set(SKIP_CUDA_TESTS ON)
+    endif()
   else()
     message(WARNING "No CUDA compiler found. Setting DISABLE_STIR_CUDA to ON.")
     set(DISABLE_STIR_CUDA ON)
