--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -86,7 +86,7 @@ jobs:
           ITK: "ON"
         - os: macOS-latest
           compiler: gcc
-          compiler_version: 11
+          # compiler_version: 11
           cuda_version: "0"
           BUILD_FLAGS: "-DSTIR_OPENMP=OFF"
           parallelproj: "OFF"
