Revert "[GHA] re-enable MacOS clang job"
This reverts commit 6abf39271dba31d5503c7ad7d3e5325109063655.

This will have to wait for later.

[actions skip]

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -93,14 +93,15 @@ jobs:
           BUILD_TYPE: "Debug"
           ROOT: "OFF"
           ITK: "OFF"
-        - os: macOS-latest
-          compiler: clang
-          compiler_version: 18
-          BUILD_FLAGS: "-DSTIR_OPENMP=OFF"
-          parallelproj: "OFF"
-          BUILD_TYPE: "Release"
-          ITK: "OFF"
-          ROOT: "OFF"
+        # Currently disabled due to problems with listmode recon, see https://github.com/UCL/STIR/issues/1200
+        #- os: macOS-latest
+        #  compiler: clang
+        #  compiler_version: 16
+        #  BUILD_FLAGS: "-DSTIR_OPENMP=OFF"
+        #  parallelproj: "OFF"
+        #  BUILD_TYPE: "Release"
+        #  ROOT: "OFF"
+        #  ITK: "OFF"
 
       # let's run all of them, as opposed to aborting when one fails
       fail-fast: false
