--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -93,15 +93,15 @@ jobs:
           BUILD_TYPE: "Debug"
           ROOT: "OFF"
           ITK: "OFF"
-        # Currently disabled due to problems with listmode recon, see https://github.com/UCL/STIR/issues/1200
-        #- os: macOS-latest
-        #  compiler: clang
-        #  compiler_version: 16
-        #  BUILD_FLAGS: "-DSTIR_OPENMP=OFF"
-        #  parallelproj: "OFF"
-        #  BUILD_TYPE: "Release"
-        #  ROOT: "OFF"
-        #  ITK: "OFF"
+        - os: macOS-latest
+          compiler: clang
+          compiler_version: 18
+          cuda_version: "0"
+          BUILD_FLAGS: "-DSTIR_OPENMP=OFF"
+          parallelproj: "OFF"
+          BUILD_TYPE: "Release"
+          ROOT: "OFF"
+          ITK: "OFF"
 
       # let's run all of them, as opposed to aborting when one fails
       fail-fast: false
