Added an additional test that compares sinogram bins for LORs that do not change during scanner downsampling.

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -74,7 +74,7 @@ set(buildblock_simple_tests
 include(stir_test_exe_targets)
 
 foreach(source ${buildblock_simple_tests})
-  create_stir_test(${source} "buildblock;IO;buildblock;numerics_buildblock;display;IO;recon_buildblock;Shape_buildblock" "")
+  create_stir_test(${source} "buildblock;IO;buildblock;numerics_buildblock;display;IO;recon_buildblock;Shape_buildblock;scatter_buildblock" "")
 endforeach()
 #
 
