--- a/src/display/CMakeLists.txt
+++ b/src/display/CMakeLists.txt
@@ -45,7 +45,7 @@ include(stir_lib_target)
 
 if( "${GRAPHICS}" STREQUAL "X")
 	find_package(Curses REQUIRED)
-	INCLUDE_DIRECTORIES(${X11_INCLUDE_DIR} ${CURSES_INCLUDE_DIR})
+	target_include_directories(${dir} PRIVATE ${X11_INCLUDE_DIR} ${CURSES_INCLUDE_DIR})
 	target_link_libraries(${dir} PUBLIC ${X11_LIBRARIES} ${CURSES_LIBRARY})
 endif()
 
