--- a/src/recon_buildblock/CMakeLists.txt
+++ b/src/recon_buildblock/CMakeLists.txt
@@ -135,6 +135,7 @@ endif()
 include(stir_lib_target)
 
 if (STIR_MPI)
+  target_include_directories(recon_buildblock ${MPI_CXX_INCLUDE_PATH})
   target_link_libraries(recon_buildblock PUBLIC ${MPI_CXX_LIBRARIES})
 endif()
 
