--- a/src/swig/CMakeLists.txt
+++ b/src/swig/CMakeLists.txt
@@ -211,7 +211,7 @@ if (BUILD_SWIG_MATLAB)
 	
   SWIG_LINK_LIBRARIES(stirMATLAB PUBLIC ${STIR_LIBRARIES}  ${Matlab_LIBRARIES})
 
-  include_directories(${Matlab_INCLUDE_DIRS})
+  target_include_directories(${SWIG_MODULE_stirMATLAB_REAL_NAME} PUBLIC ${Matlab_INCLUDE_DIRS})
   # disabled, as currently set via add_definitions in main CMakeLists.txt
   #SET_SOURCE_FILES_PROPERTIES( ${swig_generated_file_fullname}
   #      PROPERTIES COMPILE_FLAGS "${MATLAB_CXXFLAGS}")
